--- a/homework/01/爬坑记录.md
+++ b/homework/01/爬坑记录.md
@@ -52,7 +52,11 @@ https://glmatrix.net/docs/module-mat4.html
 
 
 
-这样就会生成一个 500 * 500 精度的贴图
+这样就会生成一个 500 * 500 精度的贴图，图例：
+
+![image-20211221205039859](爬坑记录/image-20211221205039859.png)
+
+实际这里用了 pack 和 unpack的方法，生成的贴图不应该是这样的...这里只展示不使用pack的时候，贴图是这样的
 
 
 
@@ -71,9 +75,72 @@ https://glmatrix.net/docs/module-mat4.html
 **homework\01\src\shaders\phongShader\phongFragment.glsl**
 
 ```glsl
-
+float useShadowMap(sampler2D shadowMap, vec4 shadowCoord) {
+  float bias = Bias();
+  vec4 depthpack = texture2D(shadowMap, shadowCoord.xy);
+  float depthUnpack = unpack(depthpack);
+  // float depthUnpack = depthpack.x;
+  // 检查当前片段是否在阴影中
+  if (depthUnpack > shadowCoord.z - bias) {
+    // 不在阴影中，返回 1.0
+    return 1.0;
+  }
+  // 否则在阴影中，返回 0.5
+  return 0.5;
+}
 ```
 
+这里bis也可以直接设置成 0.005 之类的
 
 
-## 执行过程解析
+
+Bias() 函数为
+
+```glsl
+float Bias() {
+  //解决shadow bias 因为shadow map的精度有限，当要渲染的fragment在light
+  // space中距Light很远的时候，就会有多个附近的fragement会samper shadow
+  // map中同一个texel,但是即使这些fragment在camera view
+  // space中的深度值z随xy变化是值变化是很大的， 但他们在light space
+  // 中的z值(shadow map中的值)却没变或变化很小，这是因为shadow
+  // map分辨率低，采样率低导致精度低，不能准确的记录这些细微的变化
+
+  // calculate bias (based on depth map resolution and slope)  vec3 lightDir =
+  // normalize(uLightPos);
+  vec3 lightDir = normalize(uLightPos);
+  vec3 normal = normalize(vNormal);
+  float bias = max(0.005 * (1.0 - dot(normal, lightDir)), 0.005);
+  return bias;
+}
+```
+
+这里如何取bias 不深究，具体可以参考 learnopengl 上面
+
+https://learnopengl-cn.github.io/05%20Advanced%20Lighting/03%20Shadows/01%20Shadow%20Mapping/
+
+
+
+main 方法：
+
+```glsl
+void main(void) {
+  float visibility;
+  // perform perspective divide 执行透视划分
+  vec3 projCoords = vPositionFromLight.xyz / vPositionFromLight.w;
+  // transform to [0,1] range 变换到[0,1]的范围
+  vec3 shadowCoord = projCoords * 0.5 + 0.5;
+    
+  // 计算是否在阴影中
+  visibility = useShadowMap(uShadowMap, vec4(shadowCoord, 1.0));
+  vec3 phongColor = blinnPhong();
+  gl_FragColor = vec4(phongColor * visibility, 1.0);
+}
+```
+
+**这里不太理解 vPositionFromLight.xyz / vPositionFromLight.w; 是干了什么，不太记得这个投影矩阵了...**
+
+
+
+**结果图**
+
+![image-20211221213343879](爬坑记录/image-20211221213343879.png)
